fix login alignment

--- a/src/container/Login/login.scss
+++ b/src/container/Login/login.scss
@@ -11,6 +11,8 @@
   // box-shadow: 0 0 4px #c4c4c4;
   border: 1px solid;
   .close {
+    float: left;
+    margin: 10px;
   }
   .buttons-container {
     .login-header {
@@ -25,7 +27,7 @@
       font-size: 1.2em;
     }
     .google-btn {
-      margin-bottom: unset;
+      margin-bottom: 10px;
     }
     .facebook-btn {
       margin-bottom: auto;
